meegotouchhome (0.23.6~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#220833 - Panning switcher page delivers useless PropertyNotify events to applications

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 11 Feb 2011 15:18:28 +0200

meegotouchhome (0.23.5-1) unstable; urgency=low

  * Fixes: NB#226006 Pinch gesture will break portrait only homescreen mode
  * Fixes: NB#224497 - Home does pointless XSync calls

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Thu, 10 Feb 2011 16:28:13 +0200

meegotouchhome (0.23.4-1) unstable; urgency=low

  * Removed unnecessary include

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 08 Feb 2011 18:15:47 +0200

meegotouchhome (0.23.3-1) unstable; urgency=low

  * Use Name and Icon provided in a .desktop file directly in LauncherButtons instead of getting them from libcontentaction

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 08 Feb 2011 13:22:43 +0200

meegotouchhome (0.23.2-1) unstable; urgency=low

  * Expose the X Window represented by a SwitcherButton through a QProperty

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 04 Feb 2011 15:37:48 +0200

meegotouchhome (0.23.1-1) unstable; urgency=low

  * Implemented: SWP#DUI-4840 Orientation locking support

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 04 Feb 2011 12:14:47 +0200

meegotouchhome (0.23.0-1) unstable; urgency=low

  * Implemented: SWP#DUI-4699 Home Launcher Shortcuts
  * Fixes: NB#217065 - Unable to close applications from switcher if your finger moves while holding it on the screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 21 Jan 2011 17:44:56 +0200

meegotouchhome (0.22.13-1) unstable; urgency=low

  * Fixes: NB#217961 - Some applications are not shown in the switcher after minimizing if they've been closed once

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 21 Jan 2011 17:44:11 +0200

meegotouchhome (0.22.12-1) unstable; urgency=low

  * Fixes: NB#210728
